k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matiassystem
  labels:
    app: matiassystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matiassystem
  template:
    metadata:
      labels:
        app: matiassystem
    spec:
      containers:
        - name: web
          image: matiassystem:1.0
          # Imagem carregada via "kind load", não existe em registry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
