k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matiassystem
  labels: 
    app: matiassystem
spec:
  selector:
    app: matiassystem
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9091
      targetPort: 9091
